fixed header alignment for macbook

--- a/assets/css/mainStyle.css
+++ b/assets/css/mainStyle.css
@@ -23,8 +23,8 @@ header {
 
 .header-background {
     background-color:whitesmoke;
-    width:inherit;
-    height:inherit;
+    width:100%;
+    height:33%;
     display:flex;
 }
 
@@ -33,6 +33,7 @@ header {
     height:100%;
     width:100%;
     display:flex;
+    /* border-style: dashed; */
 }
 
 .header-text {
@@ -41,6 +42,7 @@ header {
     text-align: center;
     padding: 0.5vh 1vh 0.5vh 1vh;
     text-decoration: none;
+    flex: 1;
 }
 
 .header-label:visited {
